--- a/apaman-backend/src/main/resources/application.properties
+++ b/apaman-backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=apaman-backend
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/APAMAN_BD
+spring.datasource.url=jdbc:mysql://localhost:3306/apaman
 spring.datasource.username=root
 spring.datasource.password=apaman
+spring.servlet.multipart.max-file-size=200MB
