--- a/apaman-backend/src/main/resources/application.properties
+++ b/apaman-backend/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=apaman-backend
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/apaman
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=apaman
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
